--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
                     Die Bereiche meines Praktikums decken meine Interessen ab und das Programmieren macht mir sehr viel
                     Spaß. Deshalb habe ich mich bereits im Voraus auf dieses Praktikum gefreut, um hier neue Dinge zu
                     lernen, die ich in meinem weiteren Berufsleben gut anwenden kann.
-                    Im Bezug auf die Schule und meinen Kenntnissen, die ich bereits habe, ist mir aufgefallen, dass ich
+                    In Bezug auf die Schule und meinen Kenntnissen, die ich bereits habe, ist mir aufgefallen, dass ich
                     viele Informationen bereits kenne und damit eine Basis für das Programmieren beherrsche. Die
                     Vertiefung in diesen bestimmten Bereichen, wird mir sowohl in meinem späteren Beruf, als auch in
-                    meiner Schullaufbahn in Fächern wie z.B WINF behilflich sein.</p>
+                    meiner Schullaufbahn in Fächern wie z.B. WINF behilflich sein.</p>
                 </div>
               </article>
 
@@ -148,6 +148,17 @@
               </div>
             </article>
 
+            <article class="postBox">
+              <div class="postImageWindow"></div>
+              <div class="postText">
+                <small><i class="fa-solid fa-calendar-days"></i> 22.02.2022</small>
+                <h3>HTML & CSS Online Workshop </h3>
+               <p>Da mein Chef auch tätig bei Supercode ist, hat er es mir ermöglicht an einem drei stündigen Online Workshop teilzunehmen.    
+                  Der Ablauf des Workshops hat mir sehr gefallen. Es verläuft über ein Google Meet Call, in welchem sich zuerst alle Teilnehmer einmal vorstellen. Danach fangen die Trainer mit einer kurzen Theorie, über die Grundlagen des Programmierens an. Dadurch wird versichert, dass alle Teilnehmer einen ähnlichen stand haben und auch jeder den darauffolgenden Informationen folgen kann. Über „Scrible“ (eine Online-Entwicklungsumgebung, in der ich mein Programm schreiben und laufen lassen kann) haben wir dann begonnen an unserem eigenen Projekt zu arbeiten: einer eigenen Visitenkarte. 
+                  Meine ehrliche Meinung zu dem Workshop, stellt sich als sehr positiv heraus. Ich habe sehr viel gelernt und mitnehmen können, was ich auch in meiner eigenen Webseite einbauen konnte.</p>
+              </div>
+            </article>
+
 
             <article class="postBox">
               <div class="postImageWindow"></div>
@@ -178,7 +189,7 @@
 
             <section>
               <article class="postBox">
-                <div class="postImageWindow" style="background-image: url(/assets/img/bugs.jpg"></div>
+                <div class="postImageWindow"></div>
                 <div class="postText">
                   <small><i class="fa-solid fa-calendar-days"></i> 28.02.2022 </small>
                   <h3>Bugs Besprechung</h3>
@@ -202,30 +213,10 @@
 
 
               <article class="postBox">
-                <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+                <div class="postImageWindow"></div>
                 <div class="postText">
                   <small><i class="fa-solid fa-calendar-days"></i> 03.03.2022</small>
-                  <h3>Überschrift</h3>
-                  <p>Heute haben wir uns rund um mein Layout beschäftigt. Und zwar wurde das Aussehen meiner Webseite
-                    genau verändert. Wir haben
-                    uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
-                    einladend auf meine Webseite erscheinen.
-                    Wir haben uns auch mit den Schriftarten im Allgemeinen beschäftigt und diese durch kostenlose
-                    Schriften aus dem Internet verändert. Ich habe hier die Seite <a
-                      href="https://fonts.google.com">Google Fonts</a> verwendet
-                    Ich habe gelern, wie man Links auf meiner Webseite einbauen kann, zum Beispiel, wie ich von meiner
-                    Hauptseite auf meine Visitenkarte gelangen kann.
-                    Im Vergleich zum Anfang fühle ich mich jetzt schon viel sicherer bezüglich des Programmierens.
-                    Außerdem bin ich nun in der Lage vieles schon selbständig zu machen
-                  </p>
-                </div>
-              </article>
-
-              <article class="postBox">
-                <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
-                <div class="postText">
-                  <small><i class="fa-solid fa-calendar-days"></i> 03.03.2022</small>
-                  <h3>Überschrift</h3>
+                  <h3>Fortschritte</h3>
                   <p>Heute haben wir uns rund um mein Layout beschäftigt. Und zwar wurde das Aussehen meiner Webseite
                     genau verändert. Wir haben
                     uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
@@ -242,12 +233,13 @@
               </article>
             </section>
 
-            <nav></nav>
-
           </div> <!-- END TAB 3 -->
 
 
           <div id="Tab4" class="tabcontent">
+            <h1>Woche 4</h1>
+
+          <section>
             <article class="postBox">
               <div class="postImageWindow"></div>
               <div class="postText">
@@ -267,7 +259,7 @@
 
 
             <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/bugs.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 10.03.2022</small>
                 <h3>Bugs Besprechung</h3>
@@ -278,9 +270,31 @@
                   Problem sofort zu lösen.</p>
               </div>
             </article>
+
+
+            <article class="postBox">
+              <div class="postImageWindow"></div>
+              <div class="postText">
+                <small><i class="fa-solid fa-calendar-days"></i> 10.03.2022</small>
+                <h3>UX-Ui Design Workshop</h3>
+                <p>Ich hatte wieder die Gelegenheit bei Supercode an einen Workshop teilzunehmen. Diesmal ging es aber um das Design, denn eine Website wird normalerweise von einem Designer erstellt und im Anschluss von einem Programmierer programmiert. Ich durfte lernen, wie ein Designer arbeitet und haben ein Design für eine „App“ entwickelt und es am Ende als „Produkt“ darstellen lassen. 
+                  Der Ablauf dieses Workshops neigt sich nicht so stark vom Ersten ab. Wir wurden wieder auf Google Meet von zwei Trainern begrüßt, daraufhin gab es eine kleine Kennlernrunde und eine Theorie.
+                  Dieses Mal haben wir die Webseite „Figma“ benutzt, diese ist besonders geeignet für das Design. Es handelt sich um einen Vektorgrafik-Editor und Prototyping-Tool, das hauptsächlich webbasiert ist, mit zusätzlichen Offline-Funktionen.
+                  Im Vergleich zum anderen Workshop ging es nicht darum wie man programmiert, sondern was man programmiert.
+                  Bevor eine Website erstellt werden kann muss sie von Designern designed werden.
+                  Das UI-Design setzt den Fokus auf die visuelle Gestaltung einer interaktiven Anwendung.
+                  Das UX-Design dahingegen hat zum Ziel, dem Nutzer ein positives Nutzungserlebnis zu bieten, hier ist es von Vorteil wie ein Kunde zu denken. 
+                  Ein Beispiel ist der Ort der Suchleiste, wo man diese einsetzt, um sie einfacher zu finden und Zugriff auf weitere Webseiten bekommt.
+                  Der Programmierer erstellt danach die Webseite oder einzelne Module für das Web und nutzt dafür die entsprechenden Programmiersprachen.</p>
+              </div>
+            </article>
+          </section>
+
           </div> <!-- END TAB 4 -->
 
           <div id="Tab5" class="tabcontent">
+            <h1>Woche 5</h1>
+          <section>
             <article class="postBox">
               <div class="postImageWindow"></div>
               <div class="postText">
@@ -300,7 +314,7 @@
 
 
             <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 18.03.2022</small>
                 <h3>Neue Design Ideen </h3>
@@ -321,13 +335,18 @@
                   Ein Tabopener der mir den Inhalt anzeigt, den ich angeklickt habe.</p>
               </div>
             </article>
+          </section>
+
           </div> <!-- END TAB 5 -->
 
 
           <div id="Tab6" class="tabcontent">
+            <h1>Woche 6</h1>
+
+          <section>
             <article class="postBox">
               <div class="Woche2"></div>
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 21.03.2022 </small>
                 <h3>Praktikumsstart</h3>
@@ -348,7 +367,7 @@
 
 
             <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 24.03.2022</small>
                 <h3>Überschrift</h3>
@@ -365,12 +384,17 @@
                   Ich werde es wieder bis zur nächsten Stunde üben und hoffentlich daraufhin einsetzen können.</p>
               </div>
             </article>
+          </section>
+
           </div> <!-- END TAB 6 -->
 
           <div id="Tab7" class="tabcontent">
+            <h1>Woche 7</h1>
+
+          <section>
             <article class="postBox">
               <div class="Woche2"></div>
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 28.03.2022 </small>
                 <h3>Praktikumsstart</h3>
@@ -391,7 +415,7 @@
 
 
             <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 31.03.2022</small>
                 <h3>Überschrift</h3>
@@ -409,12 +433,17 @@
                   nächsten Stunde einsetzen möchte.</p>
               </div>
             </article>
+          </section>
+
           </div> <!-- END TAB 7 -->
 
           <div id="Tab8" class="tabcontent">
+            <h1>Woche 8</h1>
+
+          <section>
             <article class="postBox">
               <div class="Woche2"></div>
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 06.04.2022 </small>
                 <h3>Praktikumsstart</h3>
@@ -434,13 +463,15 @@
 
 
             <article class="postBox">
-              <div class="postImageWindow" style="background-image: url(/assets/img/codingbild.jpg"></div>
+              <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 08.04.2022</small>
                 <h3>Überschrift</h3>
                 <p></p>
               </div>
             </article>
+          </section>
+
           </div> <!-- END TAB 8 -->
 
         </div><!-- END berichte -->
@@ -459,6 +490,7 @@
 
   <footer>
     <a href="https://github.com/Dhailiz" target="_blank"><i class="fa-brands fa-github"></i></a>
+    <a class="logo" href="https://niicee.com/" target="_blank"><img src="./assets/img/niicee logo.jpg"></a>
   </footer>
 
 
