--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 07.03.2022 </small>
-                <h3>Praktikumsstart</h3>
+                <h3>Fortschritt Dokumentation</h3>
                 <p>
                   Um besser meine Fortschritte besser vorstellen zu können habe ich auf meiner GitHub Page verschiedene
                   Repositories hochgeladen.
@@ -349,7 +349,7 @@
               <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 21.03.2022 </small>
-                <h3>Praktikumsstart</h3>
+                <h3>JS Einstieg</h3>
                 <p>Heute habe ich die ersten JavaSkript Fortschritte gemacht und wie bereits in den letzten
                   Stunden besprochen, konnte ich bis zu der heutigen Stunde den Tabopener üben und gegeben
                   falls einsetzten.
@@ -370,7 +370,7 @@
               <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 24.03.2022</small>
-                <h3>Überschrift</h3>
+                <h3>Hilfsprogramm: "JSON"</h3>
                 <p>In der heutigen Stunde haben ich JSON näher kennengelernt.
                   JSON steht für JavaScript Objekt Notation und ist ein einfaches Format zum Speichern und
                   Transportieren von Daten. Es wird häufig verwendet, wenn Daten von einem Server an eine
@@ -397,11 +397,11 @@
               <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 28.03.2022 </small>
-                <h3>Praktikumsstart</h3>
+                <h3>Java-Script Bugs</h3>
                 <p>Leider kam ich mit meinem Modul nicht weiter, weil Fragen bezüglich eines komplizierten
                   Codes gelöst werden mussten. Ich habe meinem Chef also meine Fortschritte vorgestellt und
                   wir haben gemeinsam versucht Probleme zu lösen.
-                  Ich hatte das Problem, dass mein JavaSkript Programm mir nur ein Modul anzeigen konnte
+                  Ich hatte das Problem, dass mein JavaScript Programm mir nur ein Modul anzeigen konnte
                   und keine weitere lesen konnte. Wir waren sehr lange damit beschäftigt und kamen auf eine
                   indirekte Lösung.
                   Da ich mehrere Module haben wollte, müsse ich entweder für jedes einen eigenen Code
@@ -418,13 +418,13 @@
               <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 31.03.2022</small>
-                <h3>Überschrift</h3>
+                <h3>Schwerpunkt auf den inhalt</h3>
                 <p>In der heutigen Stunde haben wir mit der Problemlösung weiter gemacht und haben uns für die
                   Schleife entschieden, sonst wäre es zu umständlich geworden, wenn ich mehr als zehn
                   Module Codes stehen habe.
                   Leider muss ich wohl oder übel feststellen, dass ich bald nichts mehr zum Programmieren
                   habe und mich langsam um den Inhalt meiner Webseite kümmern muss.
-                  Ich befasse mich also bis zur nächsten Stunde mit meinen Tagesberichten. Es ist wichtig
+                  Ich befasse mich also bis zur nächsten Stunde mit meinen Wochenberichten. Es ist wichtig
                   feststellen zu können, ob sich die eigenen Module für die Berichte überhaupt lohnen, oder ich
                   diese auch in den Kacheln lassen kann. Diese Entscheidung ist abhängig von der Länge
                   meiner Berichte und kann, deshalb erst entschieden werden sobald ich die Berichte fertig
@@ -466,7 +466,7 @@
               <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 08.04.2022</small>
-                <h3>Überschrift</h3>
+                <h3>Responsive</h3>
                 <p></p>
               </div>
             </article>
