alle bilder eingefügt

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           </div> <!-- END TAB 1 -->
 
 
-        <div id="Tab2" class="tabcontent">
+          <div id="Tab2" class="tabcontent">
           <h1>Woche 2</h1>
 
           <section>
@@ -153,9 +153,7 @@
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 22.02.2022</small>
                 <h3>HTML & CSS Online Workshop </h3>
-               <p>Da mein Chef auch tätig bei Supercode ist, hat er es mir ermöglicht an einem drei stündigen Online Workshop teilzunehmen.    
-                  Der Ablauf des Workshops hat mir sehr gefallen. Es verläuft über ein Google Meet Call, in welchem sich zuerst alle Teilnehmer einmal vorstellen. Danach fangen die Trainer mit einer kurzen Theorie, über die Grundlagen des Programmierens an. Dadurch wird versichert, dass alle Teilnehmer einen ähnlichen stand haben und auch jeder den darauffolgenden Informationen folgen kann. Über „Scrible“ (eine Online-Entwicklungsumgebung, in der ich mein Programm schreiben und laufen lassen kann) haben wir dann begonnen an unserem eigenen Projekt zu arbeiten: einer eigenen Visitenkarte. 
-                  Meine ehrliche Meinung zu dem Workshop, stellt sich als sehr positiv heraus. Ich habe sehr viel gelernt und mitnehmen können, was ich auch in meiner eigenen Webseite einbauen konnte.</p>
+               <p>Da mein Chef auch tätig bei Supercode ist, hat er es mir ermöglicht an einem drei stündigen Online Workshop teilzunehmen. Der Ablauf des Workshops hat mir sehr gefallen. Es verläuft über ein Google Meet Call, in welchem sich zuerst alle Teilnehmer einmal vorstellen. Danach fangen die Trainer mit einer kurzen Theorie, über die Grundlagen des Programmierens an. Dadurch wird versichert, dass alle Teilnehmer einen ähnlichen stand haben und auch jeder den darauffolgenden Informationen folgen kann. Über „Scrible“ (eine Online-Entwicklungsumgebung, in der ich mein Programm schreiben und laufen lassen kann) haben wir dann begonnen an unserem eigenen Projekt zu arbeiten: einer eigenen Visitenkarte. Meine ehrliche Meinung zu dem Workshop, stellt sich als sehr positiv heraus. Ich habe sehr viel gelernt und mitnehmen können, was ich auch in meiner eigenen Webseite einbauen konnte.</p>
               </div>
             </article>
 
@@ -181,7 +179,7 @@
             </article>
           </section>
 
-        </div> <!-- END TAB 2 -->
+          </div> <!-- END TAB 2 -->
 
 
           <div id="Tab3" class="tabcontent">
@@ -193,21 +191,7 @@
                 <div class="postText">
                   <small><i class="fa-solid fa-calendar-days"></i> 28.02.2022 </small>
                   <h3>Bugs Besprechung</h3>
-                  <p>
-                    Heute haben wir uns gemeinsam um meine Fragen gekümmert, um im Verlauf eine Lösung zu finden.
-                    Unter anderem hatte ich Fragen bezüglich der Hintergrundfarbe meiner Webseite, denn ich habe mich
-                    mit
-                    der Frage auseinandergesetzt, ob man meine Seite in verschiedenen Hintergrundfarben aufteilen kann.
-                    Tatsächlich ist das möglich, indem man die Webseite in verschiedene Section aufteilt und ihnen
-                    daraufhin verschiedenen Farben zuzuteilen.
-                    Eine Section ist ein HTML Element, welches verwendet wird, um zusammengehörige Elemente zu
-                    gruppieren.
-                    Außerdem konnte ich mir auf einer Seite verschiedene Webseiten anschauen und im Folgenden versuchen
-                    einige Ideen zu sammeln, die mir für mein Design nützlich sein könnten.
-                    Ähnlich zu dem Hilfsmittel: „Scrimba“ , welches ich bereits erwähnt habe, wurden mir heute neue
-                    Workshops zugeteilt, die mir weiterhelfen sollen. Einer dieser Workshops soll mein Wissen zu
-                    „Flexbox“
-                    erweitern, um es gleichzeitig auch zu üben.</p>
+                  <p>Heute haben wir uns gemeinsam um meine Fragen gekümmert, um im Verlauf eine Lösung zu finden. Unter anderem hatte ich Fragen bezüglich der Hintergrundfarbe meiner Webseite, denn ich habe mich mit der Frage auseinandergesetzt, ob man meine Seite in verschiedenen Hintergrundfarben aufteilen kann. Tatsächlich ist das möglich, indem man die Webseite in verschiedene Section aufteilt und ihnen daraufhin verschiedenen Farben zuzuteilen. Eine Section ist ein HTML Element, welches verwendet wird, um zusammengehörige Elemente zu gruppieren. Außerdem konnte ich mir auf einer Seite verschiedene Webseiten anschauen und im Folgenden versuchen einige Ideen zu sammeln, die mir für mein Design nützlich sein könnten. Ähnlich zu dem Hilfsmittel: „Scrimba“ , welches ich bereits erwähnt habe, wurden mir heute neue Workshops zugeteilt, die mir weiterhelfen sollen. Einer dieser Workshops soll mein Wissen zu „Flexbox“ erweitern, um es gleichzeitig auch zu üben.</p>
                 </div>
               </article>
 
@@ -222,8 +206,7 @@
                     uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
                     einladend auf meine Webseite erscheinen.
                     Wir haben uns auch mit den Schriftarten im Allgemeinen beschäftigt und diese durch kostenlose
-                    Schriften aus dem Internet verändert. Ich habe hier die Seite <a
-                      href="https://fonts.google.com">Google Fonts</a> verwendet
+                    Schriften aus dem Internet verändert. Ich habe hier die Seite <a href="https://fonts.google.com">Google Fonts</a> verwendet
                     Ich habe gelern, wie man Links auf meiner Webseite einbauen kann, zum Beispiel, wie ich von meiner
                     Hauptseite auf meine Visitenkarte gelangen kann.
                     Im Vergleich zum Anfang fühle ich mich jetzt schon viel sicherer bezüglich des Programmierens.
@@ -238,7 +221,6 @@
 
           <div id="Tab4" class="tabcontent">
             <h1>Woche 4</h1>
-
           <section>
             <article class="postBox">
               <div class="postImageWindow"></div>
@@ -442,11 +424,10 @@
 
           <section>
             <article class="postBox">
-              <div class="Woche2"></div>
               <div class="postImageWindow"></div>
               <div class="postText">
                 <small><i class="fa-solid fa-calendar-days"></i> 06.04.2022 </small>
-                <h3>Praktikumsstart</h3>
+                <h3>CSS abschluss Änderungen </h3>
                 <p>Wir kommen langsam zum Ende meines Praktikums und somit auch zu einer fertigen
                   Webseite.
                   Ich habe alle Berichte fertig geschrieben und gegebenenfalls korrigiert. Schlussendlich sind wir
