--- a/index.html
+++ b/index.html
@@ -198,36 +198,68 @@
 
           <div id="Tab3" class="tabcontent">
             <h1>Woche 3</h1>
-            <section>
+  
+              <section>
+                <article class="postBox">
+                  <div class="postImageWindow"></div>
+                  <div class="postText">
+                    <small><i class="fa-solid fa-calendar-days"></i> 21.02.2022 </small>
+                    <h3>Die Idee der eigenen Webseite </h3>
+                    <p>
+                      Den Ansprüchen zu unserer kreativen Gestaltung eines Praktikumsberichtes habe ich mich mit meinem
+                      Chef
+                      für eine eigene Webseite entschieden, es deckt die Kriterien unserer Schule ab und dient als
+                      praktisches Projekt, um die neu erlernten theoretischen Funktionen in der Praxis auszuprobieren.
+                      Nach meiner 8-wöchigen Praktikums-zeit soll ich also in der Lage sein meine eigene Webseite immer
+                      weiter zu verbessern und sie anschließend meiner Klasse, als Ergebnis vorzustellen. Mein gesamtes
+                      Praktikum wird also auf den Fortschritten und möglichen Problemen, denen ich mich auf dem Weg
+                      stellen
+                      könnte, basieren.
+                      Als eine Art Hausaufgabe, soll ich so also in meiner Freizeit unabhängig von der Konferenz konstant
+                      an
+                      der Seite arbeiten und diese immer weiter verbessern und möglicherweise verändern. Anhand von dem
+                      oben
+                      genannten GitHub kann man meine Fortschritte im Nachhinein in einem Überblick überschauen.
+                      Als erste Aufgabe, zum Erstellen einer Webseite, steht das skizzieren und auseinandersetzen mit
+                      einem
+                      Design bzw. Idee. Ich habe also meine ersten Ideen gesammelt und auch auf anderen Webseiten nach
+                      Inspirationen Ausschau gehalten.</p>
+                  </div>
+                </article>
+  
               <article class="postBox">
                 <div class="postImageWindow"></div>
                 <div class="postText">
-                  <small><i class="fa-solid fa-calendar-days"></i> 28.02.2022 </small>
-                  <h3>Bugs Besprechung</h3>
-                   <p>Heute haben wir uns gemeinsam um meine Fragen gekümmert, um im Verlauf eine Lösung zu finden. Unter anderem hatte ich Fragen bezüglich der Hintergrundfarbe meiner Webseite, denn ich habe mich mit der Frage auseinandergesetzt, ob man meine Seite in verschiedenen Hintergrundfarben aufteilen kann. Tatsächlich ist das möglich, indem man die Webseite in verschiedene Section aufteilt und ihnen daraufhin verschiedenen Farben zuzuteilen. Eine Section ist ein HTML Element, welches verwendet wird, um zusammengehörige Elemente zu gruppieren. Außerdem konnte ich mir auf einer Seite verschiedene Webseiten anschauen und im Folgenden versuchen einige Ideen zu sammeln, die mir für mein Design nützlich sein könnten. Ähnlich zu dem Hilfsmittel: „Scrimba“ , welches ich bereits erwähnt habe, wurden mir heute neue Workshops zugeteilt, die mir weiterhelfen sollen. Einer dieser Workshops soll mein Wissen zu „Flexbox“ erweitern, um es gleichzeitig auch zu üben.</p>
+                  <small><i class="fa-solid fa-calendar-days"></i> 22.02.2022</small>
+                  <h3>HTML & CSS Online Workshop </h3>
+                 <p>Da mein Chef auch tätig bei Supercode ist, hat er es mir ermöglicht an einem drei stündigen Online Workshop teilzunehmen. Der Ablauf des Workshops hat mir sehr gefallen. Es verläuft über ein Google Meet Call, in welchem sich zuerst alle Teilnehmer einmal vorstellen. Danach fangen die Trainer mit einer kurzen Theorie, über die Grundlagen des Programmierens an. Dadurch wird versichert, dass alle Teilnehmer einen ähnlichen stand haben und auch jeder den darauffolgenden Informationen folgen kann. Über „Scrible“ (eine Online-Entwicklungsumgebung, in der ich mein Programm schreiben und laufen lassen kann) haben wir dann begonnen an unserem eigenen Projekt zu arbeiten: einer eigenen Visitenkarte. Meine ehrliche Meinung zu dem Workshop, stellt sich als sehr positiv heraus. Ich habe sehr viel gelernt und mitnehmen können, was ich auch in meiner eigenen Webseite einbauen konnte.</p>
                 </div>
               </article>
-
-              <article class="postBox">
-                <div class="postImageWindow"></div>
-                <div class="postText">
-                  <small><i class="fa-solid fa-calendar-days"></i> 03.03.2022</small>
-                  <h3>Fortschritte</h3>
-                  <p>Heute haben wir uns rund um mein Layout beschäftigt. Und zwar wurde das Aussehen meiner Webseite
-                    genau verändert. Wir haben
-                    uns gemeinsam eine andere Hintergrundfarbe ausgesucht, welche den Leser ansprechen soll und soll
-                    einladend auf meine Webseite erscheinen.
-                    Wir haben uns auch mit den Schriftarten im Allgemeinen beschäftigt und diese durch kostenlose
-                    Schriften aus dem Internet verändert. Ich habe hier die Seite <a href="https://fonts.google.com">Google Fonts</a> verwendet
-                    Ich habe gelern, wie man Links auf meiner Webseite einbauen kann, zum Beispiel, wie ich von meiner
-                    Hauptseite auf meine Visitenkarte gelangen kann.
-                    Im Vergleich zum Anfang fühle ich mich jetzt schon viel sicherer bezüglich des Programmierens.
-                    Außerdem bin ich nun in der Lage vieles schon selbständig zu machen</p>
-                </div>
-              </article>
-            </section>
-
-          </div> <!-- END TAB 3 -->
+  
+  
+                <article class="postBox">
+                  <div class="postImageWindow"></div>
+                  <div class="postText">
+                    <small><i class="fa-solid fa-calendar-days"></i> 25.02.2022</small>
+                    <h3>Layout Design </h3>
+                    <p>In der heutigen Besprechung haben wir uns näher mit dem Layout beschäftigt. Ich habe meine Skizzen
+                      präsentiert und die ersten Entwürfe vorgestellt. Gemeinsam mit meinem Chef haben wir dann über eine
+                      genauere Struktur meiner Webseite gesprochen.
+                      Ich habe die neu erlernten Möglichkeiten, aus dem Workshop versucht in meine Webseite einzubauen.
+                      Natürlich habe ich mich auch in der Zwischenzeit mit einigen Problemen auseinandersetzen müssen.
+                      Beispielsweise hatte ich einige Fragen zu der Verschiebung, die mir mein Chef dann erklären konnte.
+                      Ich hatte einige Schwierigkeiten bezüglich meiner Aufstellung von Überschriften, Paragraphen und
+                      p-Tags. Dafür benötigt man eine Flex-Box.
+                      Bei einer FlexBox handelt es sich um ein Weblayoutmodell, durch welches Elemente innerhalb eines
+                      Containers je nach Bildschirmgröße automatisch angeordnet werden können.
+                      Um dies besser beherrschen zu können, gibt es ein perfektes Lernspiel: „flexboxfroggy“, in welchem
+                      man
+                      Frösche an den angegebenen Platz verschieben soll, indem man Flexbox einsetzt</p>
+                  </div>
+                </article>
+              </section>
+  
+            </div> <!-- END TAB 3 -->
 
 
           <div id="Tab4" class="tabcontent">
